# red_carpet

./: .gitignore  Avaya Red Carpet.postman_collection.json  Cargo.toml  README.md  deny.toml
data/: employee.json
src/: api.rs  database.rs  errors.rs  handlers.rs  main.rs  models.rs  persistence.rs  routes.rs  temp.rs  utils.rs  views.rs
src/backend/: api.rs  routes.rs
src/database/: database.rs  db.rs  file_manager.rs  mod.rs  persistence.rs
src/frontend/: handlers.rs
src/frontend/public/: styles.css
src/frontend/templates/: admin_login.html  already_logged_in.html  dashboard.html  delete_confirmation.html  edit_form.html  employee.html  employees.html  errors.html  index.html  login.html  new_employee.html  onboarded_employee.html
src/models/: admin_models.rs  employee_models.rs  mod.rs  models.rs
src/public/: styles.css
src/templates/: base.html  edit_form.html  employee.html  employees.html  index.html  layout.html  new_employee.html  save_result.html
src/utils/: mod.rs  password_utils.rs  state.rs
